k8s/weather-service/002-Deployment-sapoon-weather.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sapoon-weather
  labels:
    app: sapoon-weather
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sapoon-weather
      version: v1
  template:
    metadata:
      labels:
        app: sapoon-weather
        version: v1
    spec:
      serviceAccountName: account-sapoon-weather
      containers:
      - name: sapoon-weather
        image: gcr.io/sapoon-281605/sapoon-weather:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: tmp
          mountPath: /tmp
      volumes:
      - name: tmp
        emptyDir: {}
