k8s/weather-service/003-Service-sapoon-weather.yaml
apiVersion: v1
kind: Service
metadata:
  name: sapoon-weather
  labels:
    app: sapoon-weather
    service: sapoon-weather
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: sapoon-weather
