k8s/weather-service/004-Gateway-sapoon-weather.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: sapoon-weather-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
