k8s/weather-service/005-Virtualservice-sapoon-weather.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: sapoon-weather
spec:
  hosts:
  - "*"
  gateways:
  - sapoon-weather-gateway
  http:
  - match:
    - uri:
        prefix: /sapoon/weather
    route:
    - destination:
        host: sapoon-weather
        port:
          number: 8080
